--- a/Class03/index.html
+++ b/Class03/index.html
@@ -8,7 +8,9 @@
       href="twitter-logo-design_1035-8934.avif"
     />
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
   <body>
     <header id="header">
       <img src="logo.png" class="logo" alt="" />
